Fix blank horizontal scroll on addons details page

--- a/static/css/impala/reviews.less
+++ b/static/css/impala/reviews.less
@@ -143,6 +143,7 @@
 
     .html-rtl & {
         transform: scale(-1, 1);
+        overflow: hidden;
     }
 }
 
